# AIDevs

./: .gitignore  gpu_test.py  pyproject.toml
2024-AI2R/tasks/: C01L01-helloapi.py  C01L04-blogger.py  C01L04-moderation.py  C01L05-liar.py  C02L02-inprompt.py  C02L03-embedding.py  C02L04-whisper.py  C02L05-functions.py  C03L01-rodo.py  C03L02-scraper.py  C03L03-whoami.py  C03L04-search.py  C03L05-people.py  C04L01-knowledge.py  C04L02-tools.py  C04L03-gnome.py  C04L04-ownapi.py  C04L05-ownapipro.py  base.py
2024-AI3/services/openwebui/: docker-compose.yaml
2024-AI3/tasks/: S00L01-poligon.py  S01E01-login.py  S01E02-protokol.py  S01E03-fix-json.py  S01E04-robot.py  S01E05-cenzura.py  S02E01-mp3.py  S02E02-maps.py  S02E02-secret.py  S02E03-generate.py  S02E04-kategorie.py  S02E05-arxiv.py  S03E01-kategorie.py  S03E02-wektory.py  S03E03-database.py  S03E04-loop.py  S03E05-connections.py  S04E01-photos.py  S04E02-research.py  S04E03-softo.py  S04E04-webhook.py  S04E05-notes.py  S05E01-phone-easy.py  S05E01-phone.py  base.py  embedding.py  models.py  prompts.py  utils.py  webserver.py
