[tool.poetry]
name = "aidev3"
version = "0.1.0"
description = ""
authors = ["Jakub Rosa <jakub.rosa.95@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
requests-random-user-agent = "^2023.2.15"
beautifulsoup4 = "^4.12.3"
ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
